@@ -1,3 +1,12 @@
+2009-06-18  Roland McGrath  <roland@redhat.com>
+
+	* libdwP.h (__libdw_read_address_inc): Constify.
+	(__libdw_read_offset_inc): Likewise.
+	* dwarf_getaranges.c: Likewise.
+	* dwarf_getlocation.c: Likewise.
+	* dwarf_getsrclines.c: Likewise.
+	* dwarf_nextcu.c: Likewise.
+
 2009-05-05  Petr Machata  <pmachata@redhat.com>
 
 	* libdwP.h (__libdw_formptr): Declare new function.
